# LyricsGenerator

./: .gitignore  Makefile  NLP-requirements.txt  README.md  config.json  master.py  pyproject.toml  run.py  setup.py
LyricsGenerator.egg-info/: PKG-INFO  SOURCES.txt
TokioHotel.egg-info/: PKG-INFO  SOURCES.txt
src/: get_lyrics.py  train.py
web-app/: app.py
web-app/static/: Home.css  result.css  simple.css
web-app/templates/: Home.html  result.html  simple.html
